Hopefully finished this assignment, fixed spacing
fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import u(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600);
 
 body {
     font-family: 'Open Sans', 'Helvetica Neue', Helvetica, sans-serif;
@@ -8,13 +8,6 @@ body {
     color: #F00;
 }
 
-.required-field:after {
-    content: ' *';
-    color: #FF0000;
-}
-
-.invalid-field {
-    border: 1px solid #FF0000;
 
 form input[name='occupationOther'] {
     display: none;
